--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "clean": "rm -rf build",
+    "dev": "ts-node-dev --project tsconfig.json src/index",
     "lint": "eslint .",
     "prepublishOnly": "yarn build",
     "qc": "yarn lint && yarn type-check && prettier --check .",
     "start": "NODE_ENV=production node build/index.js",
-    "start:dev": "ts-node-dev --project tsconfig.json src/index",
     "test": "yarn qc",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "config": "^4.1.0",
+    "config": "^4.1.1",
     "csv-parse": "^6.1.0",
-    "dotenv": "^17.2.1",
-    "luxon": "^3.7.1"
+    "dotenv": "^17.2.2",
+    "luxon": "^3.7.2"
   },
   "devDependencies": {
     "@types/config": "^3.3.4",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^20.19.9",
-    "concurrently": "^9.2.0",
-    "eslint": "^9.32.0",
+    "@types/node": "^20.19.13",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "husky": "^9.1.5",
-    "lint-staged": "^16.1.4",
+    "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.42.0"
   },
   "engines": {
     "node": "^20.19.2"
